--- a/plugins/anatlyzer.atl.typing/build.properties
+++ b/plugins/anatlyzer.atl.typing/build.properties
@@ -4,7 +4,8 @@ bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               lib/guava-r05.jar
 jars.compile.order = .
 source.. = src-gen/,\
            src/
