--- a/plugins/anatlyzer.atl.editor/plugin.xml
+++ b/plugins/anatlyzer.atl.editor/plugin.xml
@@ -233,7 +233,10 @@
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
+      	locationURI="popup:anatlyzer.atl.editor.AtlEditorExt.EditorContext?after=additions">
+      <!--
       		locationURI="popup:org.eclipse.m2m.atl.adt.editor.AtlEditor.EditorContext?after=additions">
+       -->
          <!--
             locationURI="popup:#TextEditorContext?after=additions">
          -->
