--- a/plugins/esolver.aql/.project
+++ b/plugins/esolver.aql/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>esolver.aql</name>
+	<name>efinder.aql</name>
 	<comment></comment>
 	<projects>
 	</projects>
